<resources>
    <string name="app_name">Budget Bytes</string>
    <string name="login_text">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="forgot_text">Forgot Password</string>
    <string name="newpass_text">New Password</string>
    <string name="enter_text">Enter Email</string>
    <string name="email_text">Email</string>
    <string name="aboutus_btn">About Us</string>
    <string name="logout_btn">Logout</string>
    <string name="profile_txt">Admin Profile</string>
    <string name="about_us_title">About Us</string>
    <string name="about_us_founders">Creators</string>
    <string name="about_us_info">
    Welcome to Budget Bytes, your go-to destination for delicious, nutritious, and affordable recipes designed especially for students and anyone else looking to stretch their budget without sacrificing flavor or quality.\n
    Budget Bytes understands the challenges of managing a tight budget while still wanting to enjoy tasty meals.
    That\'s why we\'re here to help you whip up mouthwatering dishes without breaking the bank. \nOur mission is simple: to empower you to eat well, save money, and have fun in the kitchen.\n
    \n What Sets Us Apart: \n
    \n- Budget-Friendly Recipes: Our recipes are thoughtfully crafted to maximize flavor while minimizing cost. We believe that eating on a budget shouldn\'t mean compromising on taste or nutrition.\n
    \n- Easy-to-Follow Instructions: Whether you\'re a seasoned chef or a beginner in the kitchen, our recipes come with step-by-step instructions and helpful tips to ensure your cooking experience is smooth and stress-free.\n
    \n- Nutritionally balanced: Eating well is essential for overall health and well-being. That\'s why our recipes are designed to be nutritious, using wholesome ingredients to fuel your body and mind.\n
    \n- Variety for Every Palate: From hearty one-pot meals and flavorful vegetarian dishes to quick and easy snacks and indulgent desserts, we\'ve got something for every taste and craving.\n
   \nOur Team:\n
\nBehind Budget Bytes is a team of passionate food lovers, recipe developers, and budget-conscious individuals dedicated to bringing you the best culinary experience without breaking the bank. We\'re constantly experimenting with new flavors, ingredients, and cooking techniques to inspire you to get creative in the kitchen.
\nThank you for choosing Budget Bytes as your trusted source for affordable and delicious meals. Let\'s cook, eat, and save together!
</string>
    <string name="admin1">Franc Peter Joshias Estrabo</string>
    <string name="admin2">Thea Anne Mae Mallare</string>
    <string name="admin3">Yumiko Aizawa</string>
    <string name="description">What\'s on for today Ka-Budgets?</string>
    <string name="bfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
        <string name="food_text1">Egg Fried Rice</string>
        <string name="food_text2">Corned Beef with Corn</string>
        <string name="food_text3">Scrambled Egg with Tomatoes</string>
        <string name="food_text4">Tinapa Fried Rice</string>
        <string name="food_text5">Malunggay Soup</string>
        <string name="food_text6">Stir Fry Tofu</string>
        <string name="food_text7">Tortang Talong</string>
        <string name="food_text8">Tuna Sisig</string>
        <string name="food_text9">Tuna Pasta</string>
        <string name="food_text10">Crab and Corn Soup</string>
        <string name="food_text11">Ginisang Repolyo</string>
        <string name="food_text12">Ginisang Sardinas</string>
        <string name="food_text13">French Toast</string>
        <string name="food_text14">Graham Balls</string>
        <string name="food_text15">Potato Fritters</string>
        <string name="food_text16">Turon</string>
        <string name="recipe_btn">Recipe</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="snack_ingredients1">
        2 packs crushed graham crackers\n
        1 can sweetened condensed milk\n
        1bag marshmallows
    </string>
    <string name="snack_instructions1">1. In a bowl, combine 1½ packs of crushed graham crackers with condensed milk; mix well. Adjust sweetness to taste. Set aside the remaining half-pack of crushed graham crackers to use later.\n
    2. Put a small amount of the mixture in your hand and flatten it a little bit with your fingers. Add a piece of marshmallow to the center.\n
    3. Close the dough by forming a small ball with your fingertips.\n
    4. Roll the graham balls in the remaining crushed graham crackers or in powdered milk. You can also roll them in dried coconut or chocolate sprinkles to make them look more appetizing.\n
    5. Set in the refrigerator to cool for 10 minutes.
    </string>
    <string name="snack_ingredients2">
        2 large potatoes, peeled and grated\n
        1 small onion, finely chopped\n
        1 egg, beaten\n
        2 tablespoons all-purpose flour\n
        Salt and pepper to taste\n
        Cooking oil for frying
    </string>
    <string name="snack_instructions2">1. In a bowl, combine the grated potatoes, chopped onion, beaten egg, flour, salt, and pepper. Mix well until all ingredients are evenly combined.\n
    2. Take a spoonful of the potato mixture and carefully drop it into the hot oil, shaping it into a small fritter with the back of the spoon. Repeat to make more fritters, making sure not to overcrowd the pan.\n
    3. Fry the potato fritters until golden brown and crispy on both sides, about 2-3 minutes per side.\n
    4. Once cooked, remove the fritters from the pan and drain on paper towels to remove excess oil.\n
    5. Serve hot as a delicious and budget-friendly Filipino snack.
</string>
    <string name="snack_ingredients3">
        1 Ripe bananas, peeled and sliced lengthwise into halves or quarters\n
        1tbs Brown sugar\n
        1Spring roll wrappers (also known as lumpia wrappers)\n
        Cooking oil for frying
    </string>
    <string name="snack_instructions3">1. Lay out a spring roll wrapper on a flat surface, with one corner pointing towards you (diamond shape).\n
    2. Place a slice of banana on the wrapper, slightly above the bottom corner.\n
    3. Sprinkle brown sugar over the banana slice.\n
    4. Fold the bottom corner of the wrapper over the banana slice and tuck it under.\n
    5. Fold the left and right corners of the wrapper towards the center.\n
    6. Moisten the top corner of the wrapper with a bit of water, then roll up the wrapper tightly to seal the turon.\n
    7. Repeat the process with the remaining bananas and wrappers.\n
    8. Heat cooking oil in a frying pan over medium heat.\n
    9. Once the oil is hot, carefully add the turon to the pan, seam side down.\n
    10. Fry the turon until golden brown and crispy, turning occasionally to ensure even cooking.\n
    11. Once cooked, remove the turon from the pan and drain on paper towels to remove excess oil.\n
    12. Serve hot and enjoy your delicious homemade turon!
</string>
    <string name="snack_ingredients4">
    4 slices of bread (use slightly stale bread for best results)\n
    2 large eggs\n
    1/4 cup milk\n
    Butter or cooking oil for frying (optional)
    </string>
    <string name="snack_instructions4">
        1. In a shallow dish, whisk together the eggs and milk until well combined.\n
        2. This mixture will be your French toast batter.\n
        3. Heat a skillet or frying pan over medium heat. If desired, add a little butter or cooking oil to grease the pan.\n
        4. Dip each slice of bread into the egg mixture, making sure to coat both sides evenly. Allow excess batter to drip off.\n
        5. Place the dipped bread slices onto the heated skillet or frying pan. Cook for 2-3 minutes on each side, or until golden brown.\n
        6. Once cooked, transfer the French toast to a plate. Repeat the dipping and cooking process with the remaining bread slices.\n
        7. Serve the French toast hot with your favorite toppings, such as maple syrup, powdered sugar, fresh fruit, or whipped cream.
    </string>
    <string name="bfast_ingredients1">
    Cooked rice (preferably day-old rice)\n
    2 pieces of tinapa (smoked fish), flaked\n
    3 cloves garlic, minced\n
    Cooking oil\n
    Salt and pepper to taste\n
    Optional: chopped green onions or tomatoes for garnish
    </string>
    <string name="bfast_instructions1">1. Heat a small amount of cooking oil in a pan or skillet over medium heat.\n
    2. Add the minced garlic to the pan and sauté until golden brown and fragrant.\n
    3. Add the flaked tinapa to the pan and stir-fry for a few minutes to warm it up.\n
    4. Add the cooked rice to the pan. Break up any clumps and stir to combine with the garlic and tinapa.\n
    5. Cook the rice, stirring occasionally, until it is heated through and slightly crispy.\n
    6. Season the rice with salt and pepper to taste. Stir well to distribute the seasoning evenly.\n
    7. Once the rice is cooked to your liking, remove the pan from the heat.\n
    8. Optional: Garnish with chopped green onions or tomatoes for added flavor and color.\n
    9. Serve hot as a main breakfast dish or as a side to complement other breakfast items.
    </string>
    <string name="bfast_ingredients2">
    2 eggs\n
    1 tomato, diced\n
    1 small onion, chopped\n
    Salt and pepper to taste\n
    Cooking oil
    </string>
    <string name="bfast_instructions2">1.Heat a small amount of cooking oil in a skillet over medium heat.\n
    2.Add the chopped onion to the skillet and sauté until translucent.\n
    3.Add the diced tomatoes to the skillet and cook for a few minutes until softened.\n
    4.In a bowl, beat the eggs and season with salt and pepper to taste.\n
    5.Pour the beaten eggs into the skillet with the tomatoes and onions.\n
    6.Cook the eggs, stirring occasionally, until they are set but still moist.\n
    7.Once the eggs are cooked to your liking, remove the skillet from the heat.\n
    8.Serve the scrambled eggs with tomatoes hot with rice or bread.
    </string>
    <string name="bfast_ingredients3">
    1 can corned beef\n
    1 cup canned corn kernels, drained\n
    1 small onion, chopped\n
    2 cloves garlic, minced\n
    Cooking oil\n
    Salt and pepper to taste\n
    Cooked rice, for serving
    </string>
    <string name="lunch_ingredients3">
    2 cups malunggay leaves\n
    water\n
    onion\n
    2 eggs\n
    knorr chicken cube\n
    salt
    </string>
    <string name="lunch_instructions3">1. In a pot, bring 2-3 cups of water to a boil.\n
    2. Add the chopped onion and Knorr chicken cube to the boiling water for seasoning.\n
    3. Once the water is boiling, carefully add the malunggay leaves.\n
    4. Crack the eggs and gently add them to the pot, one at a time.\n
    5. Allow the eggs to cook in the boiling water until they reach your desired level of doneness. For soft-boiled eggs, cook for about 4-5 minutes; for hard-boiled eggs, cook for about 7-8 minutes.\n
    6. Season with salt to taste.\n
    7. Once the eggs are cooked to your liking, turn off the heat.\n
    8. Serve the malunggay soup hot and enjoy!
    </string>
    <string name="budgetbytes_txt">Budget Bytes</string>
</resources>