<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".AboutUs">

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/font1"
        android:text="@string/budgetbytes_txt"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/aboutusScrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/aboutUs_txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/aboutUs_txt"
        android:layout_width="315dp"
        android:layout_height="67dp"
        android:fontFamily="@font/font1"
        android:text="@string/aboutus_btn"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/creatorstxt"
        android:layout_width="473dp"
        android:layout_height="39dp"
        android:background="#352722"
        android:text="@string/about_us_founders"
        android:textAlignment="center"
        android:textColor="#EFE9E9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <ScrollView
        android:id="@+id/aboutusScrollview"
        android:layout_width="312dp"
        android:layout_height="500dp"
        android:background="#E91E63"
        android:contentDescription="@string/about_us_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUs_txt"
        app:layout_constraintVertical_bias="0.064">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FBD397"
            android:fontFamily="@font/noto_sans"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:text="@string/about_us_info"
            android:textSize="14sp" />
    </ScrollView>

    <TextView
        android:id="@+id/c1"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:text="@string/admin1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <TextView
        android:id="@+id/c2"
        android:layout_width="127dp"
        android:layout_height="38dp"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:text="@string/admin2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <TextView
        android:id="@+id/c3"
        android:layout_width="128dp"
        android:layout_height="21dp"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:text="@string/admin3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/c2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <ImageView
        android:id="@+id/pijey"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pijey" />

    <ImageView
        android:id="@+id/thea"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pijey"
        app:layout_constraintTop_toBottomOf="@+id/c2"
        app:srcCompat="@drawable/thea" />

    <ImageView
        android:id="@+id/yumi"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/yumi" />

</androidx.constraintlayout.widget.ConstraintLayout>